--- a/mini_project_2.ipynb
+++ b/mini_project_2.ipynb
@@ -1685,7 +1685,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 169,
+   "execution_count": 170,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_train_df, X_test_df = pd.DataFrame(X_train), pd.DataFrame(X_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 171,
    "metadata": {},
    "outputs": [
     {
