--- a/mini_project_2.ipynb
+++ b/mini_project_2.ipynb
@@ -1542,16 +1542,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 161,
+   "execution_count": 312,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.14439166000985482"
+       "KNeighborsRegressor(n_neighbors=34)"
       ]
      },
-     "execution_count": 161,
+     "execution_count": 312,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1566,7 +1566,8 @@
     "\n",
     "knn_grid.fit(cat_features, target)\n",
     "y_pred = list(knn_grid.predict(cat_features))\n",
-    "knn_grid.score(cat_features, target) \n"
+    "knn_grid.score(cat_features, target) \n",
+    "knn_grid.best_estimator_"
    ]
   },
   {
