--- a/Mini Project 3.ipynb
+++ b/Mini Project 3.ipynb
@@ -2609,11 +2609,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "#  AdaBoost"
+   ]
   },
   {
    "cell_type": "code",
