--- a/Mini Project 3.ipynb
+++ b/Mini Project 3.ipynb
@@ -730,6 +730,198 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Demographic Variable Analysis\n",
+    "#### Non-FWB Related"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 200,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "\n",
+      "agecat\n",
+      "----------\n",
+      "1: 12.56%\n",
+      "2: 12.01%\n",
+      "3: 10.51%\n",
+      "4: 7.53%\n",
+      "5: 5.93%\n",
+      "6: 6.17%\n",
+      "7: 6.25%\n",
+      "8: 9.51%\n",
+      "\n",
+      "\n",
+      "PPEDUC\n",
+      "----------\n",
+      "1: 16.08%\n",
+      "2: 11.22%\n",
+      "3: 9.36%\n",
+      "4: 5.49%\n",
+      "5: 5.1%\n",
+      "\n",
+      "\n",
+      "PPETHM\n",
+      "----------\n",
+      "1: 5.96%\n",
+      "2: 18.54%\n",
+      "3: 8.63%\n",
+      "4: 15.54%\n",
+      "\n",
+      "\n",
+      "PPGENDER\n",
+      "----------\n",
+      "1: 8.68%\n",
+      "2: 8.84%\n",
+      "\n",
+      "\n",
+      "LMscore\n",
+      "----------\n",
+      "0: 15.33%\n",
+      "1: 18.92%\n",
+      "2: 11.32%\n",
+      "3: 6.09%\n",
+      "\n",
+      "\n",
+      "KHscore\n",
+      "----------\n",
+      "-2.053: 4.35%\n",
+      "-1.9: 23.81%\n",
+      "-1.713: 23.62%\n",
+      "-1.485: 18.6%\n",
+      "-1.215: 16.49%\n",
+      "-0.909: 15.97%\n",
+      "-0.57: 10.32%\n",
+      "-0.188: 7.57%\n",
+      "0.242: 5.96%\n",
+      "0.712: 4.19%\n",
+      "1.267: 4.17%\n",
+      "\n",
+      "\n",
+      "PRODHAVE_1\n",
+      "----------\n",
+      "0: 19.15%\n",
+      "1: 6.96%\n",
+      "Avereage percent of prepaid card usage: 8.76%\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in ['agecat', 'PPEDUC', 'PPETHM', 'PPGENDER', 'LMscore', 'KHscore', 'PRODHAVE_1']:\n",
+    "    dic = {}\n",
+    "    prepaid = df_data[df_data['PRODUSE_3'] == 1][['PRODUSE_3', i]]\n",
+    "    nonprepaid = df_data[df_data['PRODUSE_3'] == 0][['PRODUSE_3', i]]\n",
+    "    a = prepaid.value_counts().sort_index(axis=0, ascending = True)   \n",
+    "    asum = a.sum()\n",
+    "    b = nonprepaid.value_counts().sort_index(axis=0, ascending = True)\n",
+    "    bsum = b.sum()\n",
+    "    average = round(asum / (asum + bsum) * 100, 2) \n",
+    "    df = pd.concat([a, b])\n",
+    "    \n",
+    "    print('\\n')\n",
+    "    print(i)\n",
+    "    print('----------')\n",
+    "    for j in range(len(a)):\n",
+    "        index = a.index[j][1]\n",
+    "        percent = round(a.iloc[j]/ (a.iloc[j] + b.iloc[j]) * 100, 2)\n",
+    "        print(str(index) + ': ' + str(percent) + '%')\n",
+    "    \n",
+    "print('Avereage percent of prepaid card usage: ' + str(average) + '%')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### FWB Related"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 189,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "\n",
+      "PPINCIMP\n",
+      "----------\n",
+      "1: 19.19%\n",
+      "2: 15.22%\n",
+      "3: 11.24%\n",
+      "4: 8.78%\n",
+      "5: 8.71%\n",
+      "6: 6.3%\n",
+      "7: 5.97%\n",
+      "8: 5.65%\n",
+      "9: 3.48%\n",
+      "\n",
+      "\n",
+      "ENDSMEET\n",
+      "----------\n",
+      "-1: 2.27%\n",
+      "1: 5.83%\n",
+      "2: 12.0%\n",
+      "3: 19.83%\n",
+      "\n",
+      "\n",
+      "REJECTED_1\n",
+      "----------\n",
+      "-1: 5.56%\n",
+      "0: 7.64%\n",
+      "1: 19.0%\n",
+      "\n",
+      "\n",
+      "MATHARDSHIP_1\n",
+      "----------\n",
+      "1: 6.47%\n",
+      "2: 18.5%\n",
+      "3: 22.15%\n",
+      "\n",
+      "Average percent of prepaid card usage: 8.76%\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in ['PPINCIMP', 'ENDSMEET', 'REJECTED_1', 'MATHARDSHIP_1']:\n",
+    "    dic = {}\n",
+    "    prepaid = df_data[df_data['PRODUSE_3'] == 1][['PRODUSE_3', i]]\n",
+    "    nonprepaid = df_data[df_data['PRODUSE_3'] == 0][['PRODUSE_3', i]]\n",
+    "    a = prepaid.value_counts().sort_index(axis=0, ascending = True)   \n",
+    "    asum = a.sum()\n",
+    "    b = nonprepaid.value_counts().sort_index(axis=0, ascending = True)\n",
+    "    bsum = b.sum()\n",
+    "    average = round(asum / (asum + bsum) * 100, 2) \n",
+    "    df = pd.concat([a, b], join = 'inner')\n",
+    "    \n",
+    "    print('\\n')\n",
+    "    print(i)\n",
+    "    print('----------')\n",
+    "    for j in range(len(a)):\n",
+    "        if i == 'MATHARDSHIP_1':\n",
+    "            index = a.index[j][1]\n",
+    "            percent = round(a.iloc[j]/ (a.iloc[j] + b.iloc[j+1]) * 100, 2)\n",
+    "            print(str(index) + ': ' + str(percent) + '%')\n",
+    "        else:\n",
+    "            index = a.index[j][1]\n",
+    "            percent = round(a.iloc[j]/ (a.iloc[j] + b.iloc[j]) * 100, 2)\n",
+    "            print(str(index) + ': ' + str(percent) + '%')\n",
+    "    \n",
+    "print('\\nAverage percent of prepaid card usage: ' + str(average) + '%')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Test 1: Random Forest"
    ]
   },
@@ -3514,17 +3706,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of Features = 5\n",
+      "-----------------------------\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.94      0.69      0.80      1168\n",
+      "           1       0.15      0.56      0.23       111\n",
+      "\n",
+      "    accuracy                           0.68      1279\n",
+      "   macro avg       0.54      0.62      0.51      1279\n",
+      "weighted avg       0.87      0.68      0.75      1279\n",
+      "\n"
+     ]
+    },
+    {
      "ename": "ValueError",
-     "evalue": "X has 20 features, but DecisionTreeClassifier is expecting 5 features as input.",
+     "evalue": "X has 5 features, but DecisionTreeClassifier is expecting 10 features as input.",
      "output_type": "error",
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[0;32m/var/folders/cq/09tgzz4968j9k4kbntx0mmrh0000gn/T/ipykernel_25157/1446748562.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     20\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     21\u001b[0m     \u001b[0;31m# Predict outcomes\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 22\u001b[0;31m     \u001b[0my_test_prob\u001b[0m\u001b[0;34m=\u001b[0m \u001b[0mresults\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpredict_proba\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mX_test_scaled\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     23\u001b[0m     \u001b[0my_test_pred\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mx\u001b[0m \u001b[0;34m>\u001b[0m \u001b[0;36m.494\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mx\u001b[0m \u001b[0;32min\u001b[0m \u001b[0my_test_prob\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     24\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/var/folders/cq/09tgzz4968j9k4kbntx0mmrh0000gn/T/ipykernel_25157/1803270877.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     20\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     21\u001b[0m     \u001b[0;31m# Predict outcomes\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 22\u001b[0;31m     \u001b[0my_test_prob\u001b[0m\u001b[0;34m=\u001b[0m \u001b[0mmodel\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpredict_proba\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mX_test_scaled\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     23\u001b[0m     \u001b[0my_test_pred\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mx\u001b[0m \u001b[0;34m>\u001b[0m \u001b[0;36m.494\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mx\u001b[0m \u001b[0;32min\u001b[0m \u001b[0my_test_prob\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     24\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
       "\u001b[0;32m~/opt/anaconda3/lib/python3.9/site-packages/sklearn/ensemble/_weight_boosting.py\u001b[0m in \u001b[0;36mpredict_proba\u001b[0;34m(self, X)\u001b[0m\n\u001b[1;32m    812\u001b[0m             \u001b[0;32mreturn\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mones\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0m_num_samples\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mX\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    813\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 814\u001b[0;31m         \u001b[0mdecision\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdecision_function\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mX\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    815\u001b[0m         \u001b[0;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_compute_proba_from_decision\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdecision\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mn_classes\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    816\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
       "\u001b[0;32m~/opt/anaconda3/lib/python3.9/site-packages/sklearn/ensemble/_weight_boosting.py\u001b[0m in \u001b[0;36mdecision_function\u001b[0;34m(self, X)\u001b[0m\n\u001b[1;32m    700\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0malgorithm\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;34m'SAMME.R'\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    701\u001b[0m             \u001b[0;31m# The weights are all 1. for SAMME.R\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 702\u001b[0;31m             pred = sum(_samme_proba(estimator, n_classes, X)\n\u001b[0m\u001b[1;32m    703\u001b[0m                        for estimator in self.estimators_)\n\u001b[1;32m    704\u001b[0m         \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m  \u001b[0;31m# self.algorithm == \"SAMME\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
       "\u001b[0;32m~/opt/anaconda3/lib/python3.9/site-packages/sklearn/ensemble/_weight_boosting.py\u001b[0m in \u001b[0;36m<genexpr>\u001b[0;34m(.0)\u001b[0m\n\u001b[1;32m    700\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0malgorithm\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;34m'SAMME.R'\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    701\u001b[0m             \u001b[0;31m# The weights are all 1. for SAMME.R\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 702\u001b[0;31m             pred = sum(_samme_proba(estimator, n_classes, X)\n\u001b[0m\u001b[1;32m    703\u001b[0m                        for estimator in self.estimators_)\n\u001b[1;32m    704\u001b[0m         \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m  \u001b[0;31m# self.algorithm == \"SAMME\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
@@ -3533,7 +3742,7 @@
       "\u001b[0;32m~/opt/anaconda3/lib/python3.9/site-packages/sklearn/tree/_classes.py\u001b[0m in \u001b[0;36m_validate_X_predict\u001b[0;34m(self, X, check_input)\u001b[0m\n\u001b[1;32m    405\u001b[0m         \u001b[0;34m\"\"\"Validate the training data on predict (probabilities).\"\"\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    406\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mcheck_input\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 407\u001b[0;31m             X = self._validate_data(X, dtype=DTYPE, accept_sparse=\"csr\",\n\u001b[0m\u001b[1;32m    408\u001b[0m                                     reset=False)\n\u001b[1;32m    409\u001b[0m             if issparse(X) and (X.indices.dtype != np.intc or\n",
       "\u001b[0;32m~/opt/anaconda3/lib/python3.9/site-packages/sklearn/base.py\u001b[0m in \u001b[0;36m_validate_data\u001b[0;34m(self, X, y, reset, validate_separately, **check_params)\u001b[0m\n\u001b[1;32m    435\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    436\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mcheck_params\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'ensure_2d'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;32mTrue\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 437\u001b[0;31m             \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_check_n_features\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mX\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mreset\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mreset\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    438\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    439\u001b[0m         \u001b[0;32mreturn\u001b[0m \u001b[0mout\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
       "\u001b[0;32m~/opt/anaconda3/lib/python3.9/site-packages/sklearn/base.py\u001b[0m in \u001b[0;36m_check_n_features\u001b[0;34m(self, X, reset)\u001b[0m\n\u001b[1;32m    363\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    364\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mn_features\u001b[0m \u001b[0;34m!=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mn_features_in_\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 365\u001b[0;31m             raise ValueError(\n\u001b[0m\u001b[1;32m    366\u001b[0m                 \u001b[0;34mf\"X has {n_features} features, but {self.__class__.__name__} \"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    367\u001b[0m                 f\"is expecting {self.n_features_in_} features as input.\")\n",
-      "\u001b[0;31mValueError\u001b[0m: X has 20 features, but DecisionTreeClassifier is expecting 5 features as input."
+      "\u001b[0;31mValueError\u001b[0m: X has 5 features, but DecisionTreeClassifier is expecting 10 features as input."
      ]
     }
    ],
@@ -3548,14 +3757,14 @@
     "    \n",
     "    scaler = StandardScaler()\n",
     "    X_train_scaled = scaler.fit_transform(X_train)\n",
-    "    y_test_scaled = scaler.transform(X_test)\n",
+    "    X_test_scaled = scaler.transform(X_test)\n",
     "    \n",
     "    # make regression model \n",
     "    model = AdaBoostClassifier(base_estimator = DecisionTreeClassifier(max_depth = 1), n_estimators = 100, learning_rate = 1)\n",
     "    #model.fit(X_train_scaled, y_train_scaled)\n",
     "\n",
     "    # fit model and print results\n",
-    "    results = model.fit(X_train_scaled, y_train)\n",
+    "    results = model.fit(X_traine_scaled, y_train)\n",
     "    #print(results.summary())\n",
     "\n",
     "    # Predict outcomes\n",
