--- a/Mini Project 4/Twitter Download Sentiment.ipynb
+++ b/Mini Project 4/Twitter Download Sentiment.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -13,7 +13,7 @@
       "[nltk_data]     /Users/gioong/nltk_data...\n",
       "[nltk_data]   Package stopwords is already up-to-date!\n",
       "[nltk_data] Downloading package punkt to /Users/gioong/nltk_data...\n",
-      "[nltk_data]   Unzipping tokenizers/punkt.zip.\n"
+      "[nltk_data]   Package punkt is already up-to-date!\n"
      ]
     },
     {
@@ -22,7 +22,7 @@
        "True"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -65,6 +65,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Apply to one of our positions  here https   t co E8DHoijkmv   Candidates selected to advance will be given free resume review and interview coaching     hiring  jobopenings  careerdevelopment\n",
+      "MentorWorks  candidates know 1sthand how powerful human interviewers can be in getting qualified applicants good jobs  Being Human   More authentic communication  MentorWorks is committed to being human in our interviews before we advocate for our candidates to our corp  partners https   t co nP5cAHqlI3\n",
       "This month  we re focused on addressing the gaps that exist between male and female experiences in landing STEM roles  Female programmers have lead the way since the birth of computing  learn about the 1st computer programmer https   t co mngb66vBYq https   t co zFjwetN9uw\n",
       "The journey to your dream job starts on our Career s page  Apply to one of opportunities today https   t co 9bvtElpekU https   t co 4hpcZ8SDwK\n",
       "RT  StackEducation  Angelina DiTommaso  CTM  sits down with our CEO  Peggy Yu  to share how she leveraged her previous experience and eager \n",
@@ -72,9 +74,7 @@
       "Every day we re fulfilling our mission to provide pathways for candidates to discover success in employment and education  Our workforce development tool kit includes our propriety Talent Accelerator Platform  TAP  \n",
       "We re a mission driven workforce development  CDFI organization and we created our apprenticeship program with  MyBlueRidgeBank to give an alternative pathway to employment and to help source candidates that may have not considered a career in banking or related fields  https   t co apoXMrzZly\n",
       "All applicants selected to advance will receive FREE resume review  interview prep  and job offer negotiation preparation  Apply to our open positions at MentorWorks and our corporate partners today https   t co 9bvtElpekU https   t co gMrK5u9dLz\n",
-      "Branch banking is a stable  high reward career path with much room for growth  Learn transferrable skills for banking industry by applying to a role with one of our bank partners  Visit our careers page to view our opportunities in banking and beyond  https   t co 9bvtElpekU\n",
-      "Bootcamps are on the rise among those changing careers or skilling up  often replacing traditional degree programs  Take a look at the data around data analytics bootcamps  https   t co FYtY05eP0B\n",
-      "The Top 2 Skills You Need to Become a Data Analyst   and How to Get Them Fast    kkrish59 breaks down 683 data analytics  amp  data science job descriptions  amp  36 technical skills from MentorWorks Insights to help you land a well paying job as a data analyst   https   t co mWm1Tr6unT\n"
+      "Branch banking is a stable  high reward career path with much room for growth  Learn transferrable skills for banking industry by applying to a role with one of our bank partners  Visit our careers page to view our opportunities in banking and beyond  https   t co 9bvtElpekU\n"
      ]
     }
    ],
@@ -82,16 +82,20 @@
     "#Authenticate credentials\n",
     "\n",
     "#Twitter credentials for the app\n",
-    "'''\n",
-    "consumer_key = 'lIJoTxgYaPqqhcMWOijuVAJFh'\n",
-    "consumer_secret = '6gg1DnFzDLHpxZ8kAIC7uJvqjjcZ2nuswFQcrgacwCybDuvpbs'\n",
-    "access_key= '1432859916277063683-laTobVIjk69Xa91kWn3YmuqGoXtoxO'\n",
-    "access_secret = 'waKE7HTEcsiFsauOzz69aUcQEI2qY6ZHBJKtY8GCiCAMs'\n",
+    "\n",
+    "consumer_key = 'lLoOz2cbplDwX3vTzZFv2Hyqz'\n",
+    "consumer_secret = 'Yp5YFPvY3ISI2KUVQC6HAqYjDCUWw5na3IFrCvTVoTuvF9QddN'\n",
+    "access_key= '3028339548-i1TWGaqfItqlybCtkJZUQ7km95pylMZl8zPQBLb'\n",
+    "access_secret = 'llC8DaUitlD5wMl0FMqSxR3L78q0OaF56oazKJF5Hqnnr'\n",
     "'''\n",
     "consumer_key = 'ELRou1VKpS5p7EBEGamXqqGRT'\n",
     "consumer_secret = 'QbsToHJOyA9ZsDrFCCw1aErF9LubwqlfLpLcJviruhKepQwX3D'\n",
     "access_key= '3138259520-6jOClvoHXzF5DCf2XaylTxhrn1Rb7X50ykQyU3C'\n",
     "access_secret = 'r9bokM5UvRbS8QnsYdQksSi2tO8gRj7T4sfq2K41jzmQM'\n",
+    "'''\n",
+    "auth = tweepy.OAuthHandler(consumer_key, consumer_secret)\n",
+    "auth.set_access_token(access_key, access_secret)\n",
+    "api = tweepy.API(auth)\n",
     "\n",
     "tweets = tweepy.Cursor(api.user_timeline, screen_name='MentorworksISA',lang='en', tweet_mode = 'extended').items(10)\n",
     "file = open(\"searchTweets.csv\", 'a',newline='')\n",
@@ -116,13 +120,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "0.8\n",
+      "0.45000000000000007\n",
       "0.14444444444444446\n",
       "0.0\n",
       "0.2277777777777778\n",
@@ -130,29 +136,7 @@
       "0.0\n",
       "0.4\n",
       "0.43333333333333335\n",
-      "0.37\n",
-      "0.75\n",
-      "0.3722222222222223\n",
-      "0.875\n",
-      "0.5380952380952381\n",
-      "0.6\n",
-      "0.0\n",
-      "0.0\n",
-      "0.6958333333333333\n",
-      "0.0\n",
-      "0.0\n",
-      "0.31666666666666665\n",
-      "0.0\n",
-      "0.14444444444444446\n",
-      "0.0\n",
-      "0.2277777777777778\n",
-      "0.9\n",
-      "0.0\n",
-      "0.4\n",
-      "0.43333333333333335\n",
-      "0.37\n",
-      "0.75\n",
-      "0.3722222222222223\n"
+      "0.37\n"
      ]
     }
    ],
@@ -182,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -197,19 +181,19 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "This month  we re focused on addressing the gaps that exist between male and female experiences in landing STEM roles  Female programmers have lead the way since the birth of computing  learn about the 1st computer programmer https   t co mngb66vBYq https   t co zFjwetN9uw\n",
-      "['This', 'month', 'we', 're', 'focused', 'on', 'addressing', 'the', 'gaps', 'that', 'exist', 'between', 'male', 'and', 'female', 'experiences', 'in', 'landing', 'STEM', 'roles', 'Female', 'programmers', 'have', 'lead', 'the', 'way', 'since', 'the', 'birth', 'of', 'computing', 'learn', 'about', 'the', '1st', 'computer', 'programmer', 'https', 't', 'co', 'mngb66vBYq', 'https', 't', 'co', 'zFjwetN9uw']\n",
-      "[Sentence(\"This month  we re focused on addressing the gaps that exist between male and female experiences in landing STEM roles  Female programmers have lead the way since the birth of computing  learn about the 1st computer programmer https   t co mngb66vBYq https   t co zFjwetN9uw\")]\n",
-      "Sentiment(polarity=0.0, subjectivity=0.14444444444444446)\n",
+      "Apply to one of our positions  here https   t co E8DHoijkmv   Candidates selected to advance will be given free resume review and interview coaching     hiring  jobopenings  careerdevelopment\n",
+      "['Apply', 'to', 'one', 'of', 'our', 'positions', 'here', 'https', 't', 'co', 'E8DHoijkmv', 'Candidates', 'selected', 'to', 'advance', 'will', 'be', 'given', 'free', 'resume', 'review', 'and', 'interview', 'coaching', 'hiring', 'jobopenings', 'careerdevelopment']\n",
+      "[Sentence(\"Apply to one of our positions  here https   t co E8DHoijkmv   Candidates selected to advance will be given free resume review and interview coaching     hiring  jobopenings  careerdevelopment\")]\n",
+      "Sentiment(polarity=0.4, subjectivity=0.8)\n",
       "####Singularization###\n",
-      "month\n",
-      "month\n",
+      "to\n",
+      "to\n",
       "####Pluralization###\n",
-      "we\n",
-      "wes\n",
+      "one\n",
+      "ones\n",
       "####Lemmatization###\n",
-      "re\n",
-      "re\n",
+      "of\n",
+      "of\n",
       "I have good spelling!\n"
      ]
     }
