--- a/Mini Project 4/Jason's Code.ipynb
+++ b/Mini Project 4/Jason's Code.ipynb
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -61,11 +61,15 @@
        "      <th></th>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>MMM</th>\n",
-       "      <th>0.012653148873629672</th>\n",
+       "      <th>ticker</th>\n",
+       "      <th>change</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>MMM</th>\n",
+       "      <th>0.012653</th>\n",
+       "    </tr>\n",
        "    <tr>\n",
        "      <th>AOS</th>\n",
        "      <th>-0.013987</th>\n",
@@ -82,10 +86,6 @@
        "      <th>ABMD</th>\n",
        "      <th>0.039578</th>\n",
        "    </tr>\n",
-       "    <tr>\n",
-       "      <th>ACN</th>\n",
-       "      <th>0.009892</th>\n",
-       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
@@ -93,10 +93,10 @@
       "text/plain": [
        "Empty DataFrame\n",
        "Columns: []\n",
-       "Index: [(AOS, -0.0139869990261064), (ABT, -0.0230782287999988), (ABBV, 0.0079974930015023), (ABMD, 0.0395775413540357), (ACN, 0.0098921154239695)]"
+       "Index: [(MMM, 0.012653149), (AOS, -0.013986999), (ABT, -0.023078229), (ABBV, 0.007997493), (ABMD, 0.039577541)]"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -169,6 +169,15 @@
     "# features = dt[dt.index.get_level_values(1) != '11-27-2020']\n",
     "\n",
     "# target = target[\"return\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_train, X_test, y_train, y_test = train_test_split(cat_features, target, random_state = 0, test_size = 0.2)"
    ]
   },
   {
