--- a/Mini Project 4/Mini Project #4.ipynb
+++ b/Mini Project 4/Mini Project #4.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1198,7 +1198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1213,11 +1213,12 @@
     "for row in alltweets:\n",
     "    blob = TextBlob(row[3])\n",
     "    if blob.sentiment.polarity>0:\n",
-    "        sntTweets.writerow([row[0],row[1],row[2],blob.sentiment.polarity,\"positive\"])\n",
+    "        sntTweets.writerow([row[0],row[1],row[2],blob.sentiment.polarity,\"positive\", blob.sentiment.subjectivity])\n",
     "    elif blob.sentiment.polarity<0:\n",
-    "        sntTweets.writerow([row[0],row[1],row[2],blob.sentiment.polarity,\"negative\"])     \n",
+    "        sntTweets.writerow([row[0],row[1],row[2],blob.sentiment.polarity,\"negative\", blob.sentiment.subjectivity])     \n",
     "    elif blob.sentiment.polarity==0:\n",
-    "        sntTweets.writerow([row[0],row[1],row[2],blob.sentiment.polarity,\"neutral\"])    \n",
+    "        sntTweets.writerow([row[0],row[1],row[2],blob.sentiment.polarity,\"neutral\", blob.sentiment.subjectivity]) \n",
+    "\n",
     "        \n",
     "file.close()\n",
     "sentiment_file.close()"
