--- a/Mini Project 4/Mini Project #4.ipynb
+++ b/Mini Project 4/Mini Project #4.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,7 +17,8 @@
     "import csv\n",
     "import sys\n",
     "import pandas_datareader as pdr\n",
-    "import datetime\n"
+    "import datetime\n",
+    "from nltk.corpus import stopwords\n"
    ]
   },
   {
@@ -1198,27 +1199,71 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 59,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Stock MMM REALTIME TREND BUY BUY 95 00 SELL 5 00 Try Best Pivot Point Calculator https co Q5ES63osKo tradingview stocks stockstowatch'"
+      ]
+     },
+     "execution_count": 59,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Tweet Cleaning\n",
+    "\n",
+    "# Open tweets CSV\n",
+    "file = open(\"searchTweets.csv\",\"r\")\n",
+    "tweets = pd.read_csv(file)\n",
+    "\n",
+    "# Import stopwords with nltk.\n",
+    "stop = stopwords.words('english')\n",
+    "\n",
+    "#test.columns = [\"tweet\",\"class\"]\n",
+    "\n",
+    "# Exclude stopwords with Python's list comprehension and pandas.DataFrame.apply.\n",
+    "tweets['tweet_without_stopwords'] = tweets['tweet'].apply(lambda x: ' '.join([word for word in x.split() if word not in (stop)]))\n",
+    "\n",
+    "tweets[['tweet_without_stopwords']].values[0][0]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<_csv.reader object at 0x7fc1f2b04740>\n"
+     ]
+    }
+   ],
    "source": [
     "# Sentiment analysis\n",
     "\n",
     "file = open(\"searchTweets.csv\",\"r\")\n",
     "alltweets = csv.reader(file)\n",
-    "\n",
+    "print(alltweets)\n",
     "sentiment_file = open(\"sentimenttweets.csv\",\"w\",newline='')\n",
     "sntTweets=csv.writer(sentiment_file)\n",
-    "\n",
+    "count = 0\n",
     "for row in alltweets:\n",
+    "    no_stopwords = tweets[['tweet_without_stopwords']].values[count][0]\n",
     "    blob = TextBlob(row[3])\n",
-    "    if blob.sentiment.polarity>0:\n",
-    "        sntTweets.writerow([row[0],row[1],row[2],blob.sentiment.polarity,\"positive\", blob.sentiment.subjectivity])\n",
-    "    elif blob.sentiment.polarity<0:\n",
-    "        sntTweets.writerow([row[0],row[1],row[2],blob.sentiment.polarity,\"negative\", blob.sentiment.subjectivity])     \n",
-    "    elif blob.sentiment.polarity==0:\n",
-    "        sntTweets.writerow([row[0],row[1],row[2],blob.sentiment.polarity,\"neutral\", blob.sentiment.subjectivity]) \n",
-    "\n",
+    "    blob2 = TextBlob(no_stopwords)\n",
+    "    if blob2.sentiment.polarity>0:\n",
+    "        sntTweets.writerow([row[0],row[1],row[2],blob.sentiment.polarity,\"positive\", blob.sentiment.subjectivity, blob2.sentiment.polarity, blob2.subjectivity])\n",
+    "    elif blob2.sentiment.polarity<0:\n",
+    "        sntTweets.writerow([row[0],row[1],row[2],blob.sentiment.polarity,\"negative\", blob.sentiment.subjectivity, blob2.sentiment.polarity, blob2.subjectivity])    \n",
+    "    elif blob2.sentiment.polarity==0:\n",
+    "        sntTweets.writerow([row[0],row[1],row[2],blob.sentiment.polarity,\"neutral\", blob.sentiment.subjectivity, blob2.sentiment.polarity, blob2.subjectivity])\n",
+    "    count += 1\n",
     "        \n",
     "file.close()\n",
     "sentiment_file.close()"
@@ -1241,7 +1286,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -1255,7 +1300,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
