--- a/Mini Project 4/Mini Project #4.ipynb
+++ b/Mini Project 4/Mini Project #4.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,8 @@
     "import sys\n",
     "import pandas_datareader as pdr\n",
     "import datetime\n",
-    "from nltk.corpus import stopwords\n"
+    "from nltk.corpus import stopwords\n",
+    "import nltk"
    ]
   },
   {
@@ -1199,22 +1200,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'Stock MMM REALTIME TREND BUY BUY 95 00 SELL 5 00 Try Best Pivot Point Calculator https co Q5ES63osKo tradingview stocks stockstowatch'"
+       "'Stock MMM REALTIME TREND BUY BUY 95 00 SELL 5 00 Try Best Pivot Point Calculator http co Q5ES63osKo tradingview stock stockstowatch'"
       ]
      },
-     "execution_count": 59,
+     "execution_count": 75,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Tweet Cleaning\n",
+    "# Text Processing\n",
     "\n",
     "# Open tweets CSV\n",
     "file = open(\"searchTweets.csv\",\"r\")\n",
@@ -1223,24 +1224,32 @@
     "# Import stopwords with nltk.\n",
     "stop = stopwords.words('english')\n",
     "\n",
-    "#test.columns = [\"tweet\",\"class\"]\n",
-    "\n",
     "# Exclude stopwords with Python's list comprehension and pandas.DataFrame.apply.\n",
     "tweets['tweet_without_stopwords'] = tweets['tweet'].apply(lambda x: ' '.join([word for word in x.split() if word not in (stop)]))\n",
     "\n",
-    "tweets[['tweet_without_stopwords']].values[0][0]\n"
+    "# Text Normalization\n",
+    "w_tokenizer = nltk.tokenize.WhitespaceTokenizer()\n",
+    "lemmatizer = nltk.stem.WordNetLemmatizer()\n",
+    "\n",
+    "def lemmatize_text(text):\n",
+    "    words = [lemmatizer.lemmatize(w) for w in w_tokenizer.tokenize(text)]\n",
+    "    return \" \".join(words)\n",
+    "tweets['processed_tweet'] = tweets.tweet_without_stopwords.apply(lemmatize_text)\n",
+    "\n",
+    "\n",
+    "tweets[['processed_tweet']].values[0][0]\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<_csv.reader object at 0x7fc1f2b04740>\n"
+      "<_csv.reader object at 0x7fc1b24cfba0>\n"
      ]
     }
    ],
@@ -1254,9 +1263,9 @@
     "sntTweets=csv.writer(sentiment_file)\n",
     "count = 0\n",
     "for row in alltweets:\n",
-    "    no_stopwords = tweets[['tweet_without_stopwords']].values[count][0]\n",
+    "    processed_tweet = tweets[['processed_tweet']].values[count][0]\n",
     "    blob = TextBlob(row[3])\n",
-    "    blob2 = TextBlob(no_stopwords)\n",
+    "    blob2 = TextBlob(processed_tweet)\n",
     "    if blob2.sentiment.polarity>0:\n",
     "        sntTweets.writerow([row[0],row[1],row[2],blob.sentiment.polarity,\"positive\", blob.sentiment.subjectivity, blob2.sentiment.polarity, blob2.subjectivity])\n",
     "    elif blob2.sentiment.polarity<0:\n",
